--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhamzz Personal Web</title>
+    <title>Ziva Personal Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Dzx<span>Api's</span></a></div>
+            <div class="logo"><a href="#">Ziva<span>Api's</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -40,9 +40,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Idham Thoriq</div>
+                <div class="text-2">Ziva Aulia</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://api.dhamzxploit.my.id" target="_blank">My Rest Api's</a>
+                <a href="https://wa.me/message/VMFSAQLCPZW7H1" target="_blank">My WhatsApp</a>
             </div>
         </div>
     </section>
@@ -56,8 +56,8 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Idham and I'm a <span class="typing-2"></span></div>
-                    <p>Halo nama saya Idham Thoriq saya baru berumur 14thn, saya sekolah di Mts Persis Tarogong Garut. Saya mulai suka pada proggramming pada umur 12thn, Bahasa pemrograman yang saya ketahui hanya sedikit, yaitu (HTML/CSS/JavaScript), Python dan Java</p>
+                    <div class="text">I'm Ziva and I'm a <span class="typing-2"></span></div>
+                    <p>Halo nama saya Ziva Aulia saya baru berumur 18thn, saya sekolah di SMK Negeri 01 Sragi. Saya mulai suka pada proggramming pada umur 12thn, Bahasa pemrograman yang saya ketahui hanya sedikit, yaitu (HTML/CSS/JavaScript), Python dan Java</p>
                     <a href="./profile.html">Profile Card</a>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Idham Thoriq</div>
+                        <div class="text">Ziva Aulia</div>
                         <p></p>
                     </div>
                 </div>
@@ -203,21 +203,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Idham Thoriq</div>
+                                <div class="sub-title">Ziva Aulia</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Alamat</div>
-                                <div class="sub-title">Tarogong kidul, Garut</div>
+                                <div class="sub-title">JawaTengah, Pemalang</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">damzz@dhamzxploit.my.id</div>
+                                <div class="sub-title">yshahahayesga@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -248,17 +248,12 @@
             </div>
         </div>
         <div class="abc">
-            <a class="a" href="https://wa.me/+13479805233">
+            <a class="a" href="https://wa.me/message/VMFSAQLCPZW7H1">
               <i class="fab fa-whatsapp"></i>
             </a>
-            <a class="a" href="https://github.com/idhamthoriqbot">
-              <i class="fab fa-github"></i>
-            </a>
-            <a class="a" href="https://instagram.com/Dhamz._">
+            <a class="a" href="https://instagram.com/wgwg_6649">
               <i class="fab fa-instagram"></i>
             </a>
-            <a class="a" href="https://www.youtube.com/channel/UCvG0qWJG6lL1jqtJ1WSG94g?sub_confirmation=1">
-              <i class="fab fa-youtube"></i>
             </a>
           </div>
     </section>
@@ -267,7 +262,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="./profile.html">Idham</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="./profile.html">ZivaAulia</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
