--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Ziva<span>Api's</span></a></div>
+            <div class="logo"><a href="#">Ziva<span>Aulia</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -262,7 +262,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="./profile.html">ZivaAulia</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="./profile.html">ZivaAulia</a> | <span class="far fa-copyright"></span> 2022 All rights.</span>
     </footer>
 
     <script src="script.js"></script>
